reorganize project structure

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "My Map App",
-  "name": "My Map App",
+  "short_name": "Georgia Fall Color Destinations",
+  "name": "Georgia Fall Color Destinations",
   "icons": [
     {
       "src": "pamphlet.ico",
