--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "aws-amplify": "^4.3.2",
+    "aws-sdk": "^2.1009.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mapbox-gl": "^2.4.1",
